--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,79 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
+# Flutter/Dart/Pub related
+.dart_tool/
+.packages
+.pub-cache/
+build/
+flutter_*.png
+.melos_tool/
 
-# IntelliJ related
+# Generated plugin registrant
+generated_plugin_registrant.dart
+
+# Android
+/android/.gradle/
+/android/captures/
+/android/.idea/
+/android/local.properties
+/android/app/key.properties
+
+# iOS and macOS
+/ios/Flutter/Flutter.framework
+/ios/Flutter/Flutter.podspec
+/ios/Flutter/Generated.xcconfig
+/ios/Runner.xcworkspace/
+/ios/Pods/
+/ios/.symlinks/
+/ios/.flutter-plugins
+/ios/.flutter-plugins-dependencies
+/ios/.generated/
+/macos/Flutter/GeneratedPluginRegistrant.swift
+/macos/Flutter/ephemeral/
+/macos/Pods/
+/macos/.symlinks/
+/macos/.flutter-plugins
+/macos/.flutter-plugins-dependencies
+/macos/Flutter/Generated.xcconfig
+/macos/.generated/
+
+# Web
+/web/.dart_tool/
+/web/generated_plugin_registrant.dart
+
+# Windows
+/windows/flutter/generated_plugin_registrant.cc
+/windows/flutter/ephemeral/
+/windows/CMakeFiles/
+/windows/build/
+
+# Linux
+/linux/flutter/generated_plugin_registrant.cc
+/linux/flutter/ephemeral/
+/linux/CMakeFiles/
+/linux/build/
+
+# VS Code
+.vscode/
+
+# IntelliJ
 *.iml
 *.ipr
 *.iws
 .idea/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
+# Misc
+*.log
+*.tmp
+*.swp
+*.DS_Store
+*.lock
+pubspec.lock
 
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
-.dart_tool/
-.flutter-plugins
-.flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
+# Firebase
+.firebase/
 
-# Symbolication related
-app.*.symbols
+# Coverage
+coverage/
 
-# Obfuscation related
-app.*.map.json
-
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Dart test outputs
+test/**/.dart_tool/
+test/**/build/
