--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: salinite_mobile
-description: "A new Flutter project."
+description: "A flutter project just for displaying salinity value from esp32."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -38,6 +38,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   pull_to_refresh: ^2.0.0
   http: ^1.4.0
+
 
 dev_dependencies:
   flutter_test:
