--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_spinkit: ^5.2.1
   pull_to_refresh: ^2.0.0
   http: ^1.4.0
+  intl: ^0.20.2
+  fl_chart: ^1.0.0
 
 
 dev_dependencies:
